--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/cli-progress": "^3.11.6",
         "@types/glob": "^8.1.0",
         "@types/node": "^22.13.1",
+        "@types/prompts": "^2.4.9",
         "@types/readline-sync": "^1.4.8",
         "@types/uglify-js": "^3.17.5",
         "@types/yargs": "^17.0.33",
@@ -39,8 +40,9 @@
     "dependencies": {
         "chalk": "^5.4.1",
         "cli-progress": "^3.12.0",
+        "commander": "^13.1.0",
         "glob": "^11.0.1",
-        "inquirer": "^12.4.1",
+        "prompts": "^2.4.2",
         "readline-sync": "^1.4.10",
         "typescript": "^5.7.3",
         "uglify-js": "^3.19.3",
