--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -18,9 +18,10 @@
         "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
         "paths": {
             "@/*": ["./*"],
-            "@type/*": ["./types/*"]
+            "@type/*": ["./types/*"],
+            "@helper/*": ["./helpers/*"]
         } /* Specify a set of entries that re-map imports to additional lookup locations. */,
-        "rootDirs": ["./src"] /* Allow multiple folders to be treated as one when resolving modules. */,
+        //"rootDirs": ["./src"] /* Allow multiple folders to be treated as one when resolving modules. */,
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
         // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
         // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
@@ -98,5 +99,5 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "include": ["**/*"]
+    "exclude": ["dist.ts"]
 }
